<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wildcatbank2.ContactUs">

    <!-- TODO: Update blank fragment layout -->







    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="280dp"

        android:layout_gravity="center">
        <TextView
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_title"
            android:layout_marginTop="31dp"
            android:textIsSelectable="false"
            android:textSize="42sp"
            android:textColor="#1b304b"
            android:layout_gravity="center_horizontal|top"
            android:autoText="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_us"
            android:id="@+id/call_button"
            android:textColor="#1b304b"
            android:background="#00ffffff"
            android:layout_gravity="center_horizontal"
            android:autoLink="phone"
            android:textSize="18dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contact_us"
            android:autoLink="email"
            android:id="@+id/contact_button"
            android:background="#00ffffff"
            android:textColor="#1b304b"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:textSize="18dp" />
    </LinearLayout>


</FrameLayout>
